# markdown-website-generator

./: .gitignore  README.md  config.yaml  generator.py  pyproject.toml
content/: hello.md
src/md2go/: config.yaml  generator.py
templates/: base.html  index.html
